# wros

./: .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: architect.md  debugger.md  developer.md  tester.md
catkin_ws/noetic/src/wros_tutorials/: CMakeLists.txt  package.xml  setup.py
catkin_ws/noetic/src/wros_tutorials/config/: grasps.rviz  planner_params_robotiq140_example.yaml  planner_params_robotiq140_obstcl_example.yaml  planner_params_robotiq140_single_example.yaml  planner_params_robotiq85_example.yaml  planner_params_robotiq85_obstcl_example.yaml  planner_params_robotiq85_single_example.yaml  planner_params_robotiqhe_example.yaml  planner_params_robotiqhe_obstcl_example.yaml  planner_params_robotiqhe_single_example.yaml  planner_params_sgb30_example.yaml  planner_params_sgb30_obstcl_example.yaml  planner_params_sgb30_single_example.yaml  planner_params_suction_example.yaml  planner_params_suction_obstcl_example.yaml  planner_params_suction_single_example.yaml
catkin_ws/noetic/src/wros_tutorials/launch/: plan_grasp.launch  plan_tube_grasp.launch
catkin_ws/noetic/src/wros_tutorials/meshes/: table_mm.stl
catkin_ws/noetic/src/wros_tutorials/scripts/: grasp_planning_service.py
docker/: Dockerfile  requirements.txt
